fix: add wrap to card number AB#28503

--- a/interfaces/Portal/src/app/components/registration-physical-card-overview/registration-physical-card-overview.component.scss
+++ b/interfaces/Portal/src/app/components/registration-physical-card-overview/registration-physical-card-overview.component.scss
@@ -1,3 +1,5 @@
-.card {
-  font-size: 14px;
+.pysical-card-number {
+  font-size: 0.875rem;
+  overflow: visible;
+  overflow-wrap: anywhere;
 }
